--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="StyleSheet1.css" />
 </head>
